--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,4 +1,3 @@
-/* To learn more about this file see: https://angular.io/config/tsconfig. */
 {
   "compileOnSave": false,
   "compilerOptions": {
@@ -15,6 +14,15 @@
     "lib": [
       "es2018",
       "dom"
-    ]
+    ],
+    "paths": {
+      "auth-lib": [
+        "dist/auth-lib/auth-lib",
+        "dist/auth-lib"
+      ],
+      "auth-api-sdk": [
+        "./projects/auth-lib/sdk/auth-api-sdk/index.ts"
+      ]
+    }
   }
 }
