updated ts config

--- a/projects/auth-lib/package.json
+++ b/projects/auth-lib/package.json
@@ -2,7 +2,7 @@
   "name": "auth-lib",
   "version": "0.0.1",
   "scripts": {
-    "build": "ng build",
+    "build": "ng-packagr -p ng-package.json",
     "clean:auth-api-sdk": "rimraf *.tgz ./sdk/auth-api-sdk",
     "generate-auth-api-sdk": "npm run clean:auth-api-sdk && openapi-generator generate -g typescript-angular -i http://staging.tikioo.com/auth-api/v3/api-docs -o ./sdk/auth-api-sdk --additional-properties npmName=auth-api-sdk,snapshot=true,ngVersion=9.1.4,fileNaming=kebab-case,npmVersion=1.0.0,useSingleRequestParameter=true"
   },
