--- a/projects/auth-lib/tsconfig.lib.json
+++ b/projects/auth-lib/tsconfig.lib.json
@@ -2,6 +2,7 @@
 {
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
+    "baseUrl": "./",
     "outDir": "../../out-tsc/lib",
     "target": "es2015",
     "declaration": true,
@@ -10,7 +11,12 @@
     "lib": [
       "dom",
       "es2018"
-    ]
+    ],
+    "paths": {
+      "auth-api-sdk": [
+        "./sdk/auth-api-sdk/index.ts"
+      ]
+    }
   },
   "angularCompilerOptions": {
     "skipTemplateCodegen": true,
