updated password reset feature

--- a/projects/auth-lib/tsconfig.lib.json
+++ b/projects/auth-lib/tsconfig.lib.json
@@ -14,7 +14,7 @@
     ],
     "paths": {
       "auth-api-sdk": [
-        "./sdk/auth-api-sdk/index.ts"
+        "./src/sdk/auth-api-sdk/index.ts"
       ]
     }
   },
